--- a/assets/scss/assets/_breakpoints.scss
+++ b/assets/scss/assets/_breakpoints.scss
@@ -1,16 +1,16 @@
 @mixin break($breakpoint) {
   @if $breakpoint==laptop {
-    @media only screen and (min-width: 1024px) {
+    @media only screen and (min-width: 1025px) and (max-width: 1280px) {
       @content;
     }
   }
   @if $breakpoint==tablet {
-    @media only screen and (min-width: 768px) {
+    @media only screen and (min-width: 700px) {
       @content;
     }
   }
   @if $breakpoint==mobile {
-    @media only screen and (min-width: 480px) {
+    @media only screen and (min-width: 320px) {
       @content;
     }
   }
